# letterlanders

./: .gitignore  ANDROID_BUILD.md  ARCHITECTURE.md  Cargo.toml  PRIVACY_POLICY.md  README.md  download_assets.sh  generate_assets.sh  settings.json
.github/workflows/: android.yml  ci.yml
.prompts/: 2025-12-05.md
app/: .gitignore  README.md  RELEASE_NOTES.txt  package-lock.json  package.json  vite.config.js
app/src/: app.html
app/src-tauri/: Cargo.toml  settings.json  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/lib/: About.svelte  AudioPlayer.svelte  Boss.svelte  Feedback.svelte  Game.svelte  LevelComplete.svelte  Menu.svelte  Rocket.svelte  Settings.svelte  Victory.svelte  backend.ts  game-store.svelte.ts
app/src/routes/: +page.svelte
core/: Cargo.toml
core/src/: game.rs  lib.rs  settings.rs  state.rs
tui/: Cargo.toml
tui/src/: main.rs  ui.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
