[package]
name = "letterlanders-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
letterlanders-core = { path = "../core" }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
